# WhisperOverlay

./: LICENSE  README.md  SETUP.md  app.py  config.py  cuda_path_fix.py  engine.py  log_setup.py  notes_window.py  overlay.py  pyproject.toml  storage.py  subtitle_lines.py  typing_output.py
